# py-msgraphfs

./: README.md  pyproject.toml
src/: msgraphfs.py
